# mapalinear

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  __init__.py  alembic.ini  mprocs.yaml  pois_for_comparison.json  pyproject.toml  pytest.ini  render.yaml  test_cli_integration.py  test_real_osm_integration.py  verify_refactoring.py
api/: main.py  run.py
api/alembic/: env.py
api/config/: README.md  __init__.py  logging_config.debug.yaml  logging_config.production.yaml  logging_config.yaml  logging_setup.py
api/database/: __init__.py  connection.py
api/middleware/: __init__.py  auth.py  error_handler.py  request_id.py
api/models/: base.py  export_models.py  municipality_models.py  osm_models.py  road_models.py
api/providers/: __init__.py  base.py  cache.py  cache_schema.sql  manager.py  models.py  settings.py
cli/: main.py
devdocs/: development_guidelines.md  frontend_design.md  github_project_setup.md  plan.md  poc_features_priority.md  poc_plan.md
docs/: Comparativo-OSM-vs-HERE-POIs.md  HERE-Implementation-Next-Steps.md  Linear-Map-Generation-Process.md  PRD-MultiProvider-GeoAPI-Refactoring.md  PRD-Reusable-Route-Segments.md  PRD-SQLAlchemy-Alembic-Migration.md  PRD-User-Analytics.md  analytics-events.md
frontend/: .gitignore  middleware.ts  next.config.ts  package-lock.json  package.json
mapalinear/: __init__.py
scripts/: compare_poi_apis.py
small-tests/route_between_cities/: main.py  pyproject.toml
tests/: conftest.py  test_admin_pois_api.py  test_api_integration.py  test_impersonation.py  test_integration_refactored.py
(+277 files in other folders)
