[tool.poetry]
name = "mapalinear"
version = "0.1.0"
description = "Extração de dados do OpenStreetMap para criar mapas lineares de estradas"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
pydantic = "^2.6.0"
httpx = "^0.26.0"
overpass = "^0.7"
pyproj = "^3.6.0"
click = "^8.1.7"
osmnx = "^1.8.0"
geopy = "^2.4.1"
typer = "^0.9.0"
rich = "^13.7.0"
scikit-learn = "^1.3.0"
aiohttp = "^3.11.18"
tenacity = "^9.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
mypy = "^1.8.0"
black = "^24.1.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mapalinear = "mapalinear.cli.main:main"
