[tool.poetry]
name = "route-between-cities"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
osmnx = "^2.0.3"
networkx = "^3.4.2"
matplotlib = "^3.10.3"
geopy = "^2.4.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
